# python-patterns

./: .gitignore  README.md  pyproject.toml
src/: build.py
src/embedded_project/main/: main.py  main_bad.py
src/embedded_project/main/cli/: list_command.py  main.py  reset_command.py
src/embedded_project/main/dir_reader/: dir_change_event_api.py  dir_reader_api.py  dir_reader_ctrl.py  dir_reader_worker.py  dir_reader_worker_bad.py  directory_model.py  file_model.py
src/embedded_project/main/dir_synchronizer/: dir_synchronizer_api.py  dir_synchronizer_ctrl.py  dir_synchronizer_worker.py
src/embedded_project/main/utils/: common_args.py
src/embedded_project/main/worker/: main.py  worker.py
src/embedded_project/tests/: test_bad_worker.py  test_dir_reader_ctrl.py  test_worker.py
src/embedded_project/tests/dir_reader/: test_bad_dir_reader_worker.py  test_dir_reader_ctrl.py  test_dir_reader_worker.py  test_directory_model.py
src/embedded_project/tests/dir_synchronizer/: test_dir_synchronizer_ctrl.py
src/file_syncer/main/: main.py  main_bad.py  simple_cli.py  simple_main.py
src/file_syncer/main/cli/: diff_command.py  list_command.py  main.py  reset_command.py
src/file_syncer/main/dir_reader/: dir_change_event_api.py  dir_reader_api.py  dir_reader_ctrl.py  dir_reader_worker.py  directory_model.py
src/file_syncer/main/dir_synchronizer/: dir_synchronizer_api.py  (+3 more)
src/file_syncer/tests/: test_bad_worker.py  test_simple_worker.py
src/utils/: file_utils.py  sleep_utils.py  statsd_utils.py  worker_utils.py
src/web_syncer/main/: config.py  main.py
(+14 files in other folders)
